# pydevd-odoo

./: LICENSE  README.md  pyproject.toml  setup.py
pydevd_odoo/: __init__.py
pydevd_odoo/pydevd_plugins/extensions/types/: pydevd_plugin_odoo.py
pydevd_plugins/extensions/: pydevd_plugin_odoo.py
src/pydevd_plugins/extensions/: pydevd_plugin_odoo.py
